--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "admin-lte": "^2.4.12",
     "angular2-text-mask": "^9.0.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "jquery-slimscroll": "^1.3.8",
     "rxjs": "^6.0.0",
+    "save": "^2.4.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -36,6 +40,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
